--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inlämningsuppgift 1 - Responsive layout</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div id="container">
-      <section class="section-header">Header</section>
-      <section class="section-box1">box1</section>
-      <section class="section-box2">box2</section>
-      <section class="section-box3">box3</section>
-      <section class="section-content">content</section>
-      <section class="section-sidebar">sidebar</section>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inlämningsuppgift 1 - Responsive layout</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <div id="container">
+    <div class="section-header">
+      <button id="btn1">Button 1</button>
+      <button id="btn2">Button 2</button>
+      <button id="btn3">Button 3</button>
+      <button id="btn4">Button 4</button>
     </div>
-    <div id="container-footer">
-      <section class="section-footer1">footer section 1</section>
-      <section class="section-footer2">footer section 2</section>
-      <section class="section-footer3">footer section 3</section>
-      <section class="section-footer4">footer section 4</section>
+    <section class="section-box1">box1</section>
+    <section class="section-box2">box2</section>
+    <section class="section-box3">box3</section>
+    <div class="section-content">
+      <section id="content-1">content 1</section>
+      <section id="content-2">content 2</section>
+      <section id="content-3">content 3</section>
+      <section id="content-4">content 4</section>
+      <section id="content-5">content 5</section>
+      <section id="content-6">content 6</section>
     </div>
-  </body>
+    <div class="section-sidebar">
+      <button id="btn1">Button 1</button>
+      <button id="btn2">Button 2</button>
+      <button id="btn3">Button 3</button>
+      <button id="btn4">Button 4</button>
+    </div>
+  </div>
+  <div id="container-footer">
+    <section class="section-footer1">footer section 1</section>
+    <section class="section-footer2">footer section 2</section>
+    <section class="section-footer3">footer section 3</section>
+    <section class="section-footer4">footer section 4</section>
+  </div>
+</body>
+
 </html>
