--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="container">
-    <div class="header">
+    <div class="header" id="header">
       <button id="btn1">Button 1</button>
       <button id="btn2">Button 2</button>
       <button id="btn3">Button 3</button>
@@ -20,7 +20,7 @@
     <section class="section-box1">box1</section>
     <section class="section-box2">box2</section>
     <section class="section-box3">box3</section>
-    <div class="content">
+    <div class="content" id="content">
       <section id="content-1">content 1</section>
       <section id="content-2">content 2</section>
       <section id="content-3">content 3</section>
@@ -28,7 +28,7 @@
       <section id="content-5">content 5</section>
       <section id="content-6">content 6</section>
     </div>
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
       <button id="btn-side-1">Button 1</button>
       <button id="btn-side-2">Button 2</button>
       <button id="btn-side-3">Button 3</button>
